--- a/Examples/src/main/AndroidManifest.xml
+++ b/Examples/src/main/AndroidManifest.xml
@@ -21,9 +21,9 @@
     <application
         android:name=".MyApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_logo"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_logo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
@@ -31,11 +31,11 @@
             android:name=".ExternalVideoSourceActivityKt"
             android:label="@string/ext_video_example"
             android:screenOrientation="landscape">
-            <intent-filter>
+         <!--   <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            </intent-filter>-->
         </activity>
         <activity
             android:name=".ExternalVideoSourceActivity"
@@ -45,25 +45,35 @@
             android:name=".SafetyActivityKt"
             android:label="@string/safety_example"
             android:screenOrientation="landscape">
+          <!--  <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>-->
+        </activity>
+        <activity
+            android:name=".SafetyActivity"
+            android:screenOrientation="landscape" />
+
+        <activity android:name=".MainActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".SafetyActivity"
-            android:screenOrientation="landscape" />
 
         <activity
             android:name=".ArActivityKt"
             android:label="@string/ar_example"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
             android:screenOrientation="landscape">
-            <intent-filter>
+          <!--  <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            </intent-filter> -->
         </activity>
         <activity
             android:name=".ArActivity"
@@ -73,11 +83,11 @@
             android:name=".CustomDetectionActivityKt"
             android:label="@string/custom_detections_example"
             android:screenOrientation="landscape">
-            <intent-filter>
+         <!--   <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            </intent-filter>-->
         </activity>
         <activity
             android:name=".CustomDetectionActivity"
@@ -87,10 +97,10 @@
             android:name=".POIActivityKt"
             android:label="@string/poi_example"
             android:screenOrientation="landscape">
-            <intent-filter>
+       <!--     <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            </intent-filter>-->
         </activity>
         <activity
             android:name=".POIActivity"
@@ -105,22 +115,22 @@
         <activity
             android:name=".UsbVideoSourceActivity"
             android:screenOrientation="landscape" >
-            <intent-filter>
+         <!--   <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            </intent-filter>-->
         </activity>
 
         <activity
             android:name=".ArCustomizationActivityKt"
             android:label="@string/ar_customization_example"
             android:screenOrientation="landscape">
-            <intent-filter>
+          <!--  <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            </intent-filter>-->
         </activity>
 
         <activity
