--- a/Examples/src/main/AndroidManifest.xml
+++ b/Examples/src/main/AndroidManifest.xml
@@ -31,11 +31,11 @@
             android:name=".ExternalVideoSourceActivityKt"
             android:label="@string/ext_video_example"
             android:screenOrientation="landscape">
-         <!--   <intent-filter>
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>-->
+            </intent-filter>
         </activity>
         <activity
             android:name=".ExternalVideoSourceActivity"
@@ -45,11 +45,11 @@
             android:name=".SafetyActivityKt"
             android:label="@string/safety_example"
             android:screenOrientation="landscape">
-          <!--  <intent-filter>
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>-->
+            </intent-filter>
         </activity>
         <activity
             android:name=".SafetyActivity"
@@ -69,11 +69,11 @@
             android:label="@string/ar_example"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar"
             android:screenOrientation="landscape">
-          <!--  <intent-filter>
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter> -->
+            </intent-filter>
         </activity>
         <activity
             android:name=".ArActivity"
@@ -83,11 +83,11 @@
             android:name=".CustomDetectionActivityKt"
             android:label="@string/custom_detections_example"
             android:screenOrientation="landscape">
-         <!--   <intent-filter>
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>-->
+            </intent-filter>
         </activity>
         <activity
             android:name=".CustomDetectionActivity"
@@ -97,10 +97,10 @@
             android:name=".POIActivityKt"
             android:label="@string/poi_example"
             android:screenOrientation="landscape">
-       <!--     <intent-filter>
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>-->
+            </intent-filter>
         </activity>
         <activity
             android:name=".POIActivity"
@@ -115,22 +115,22 @@
         <activity
             android:name=".UsbVideoSourceActivity"
             android:screenOrientation="landscape" >
-         <!--   <intent-filter>
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>-->
+            </intent-filter>
         </activity>
 
         <activity
             android:name=".ArCustomizationActivityKt"
             android:label="@string/ar_customization_example"
             android:screenOrientation="landscape">
-          <!--  <intent-filter>
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>-->
+            </intent-filter>
         </activity>
 
         <activity
